--- a/package.json
+++ b/package.json
@@ -78,7 +78,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "node server.js"
+    "server": "node server.js",
+    "server2": "node server2.js",
+    "start-all": "npm run server & npm run server2"
+
   },
   "keywords": [],
   "author": "",
